# Oreo

./: .gitignore  README.md
CNN/: README.md  convFunc.py  model.py  runModel.py  savedata.py
Circuits/MoterController/OreoMotorController/: OreoMotorController-cache.lib  OreoMotorController.bak
VideoProcessing/: .gitignore  CMakeLists.txt  main.cpp
VideoProcessing/Includes/oreo/Engine/: SpinLock-Decl.hpp  SpinLock.hpp
VideoProcessing/Sources/oreo/: CMakeLists.txt
